k8s/Istio_Gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: three-tier-gateway
  namespace: three-tier
spec:
  selector:
    istio: ingressgateway   # targets the IngressGateway pod
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
