k8s/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: three-tier-vs
  namespace: three-tier
spec:
  hosts:
    - "*"
  gateways:
    - three-tier/three-tier-gateway
  http:
    - match:
        - uri:
            prefix: "/api"
      route:
        - destination:
            host: backend-service
            port:
              number: 3500

    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend-service
            port:
              number: 3000
